For 1.20.1
	- Collision equations for collision with Polyreps improved by having a quick check
	  to reduce testing on all triangles of distant shapes.

	- Frustum culling was not working on OSX computers - differences in OpenGL headers
	  between Linux and OSX; a #ifdef AQUA added to differentiate.

	- EAI/SAI changes for VRML parser - keep DEFines around between calls of cParse.

	- possible threading issue fixed whereby a script can be called in Routing before parsing has
	  initialized it.

For 1.20.0 (Some came out with 1.19.9 for Linux):
	- Routing to SFImages was broken - tests/Javascript/SFImage.wrl works with new parser.

	- Classic parser - refactor DEF and USE within MF* fields.

	- Linux Sound - changed the maximum number of concurrent sound files to 128.

	- PROTO expansion for SFNodes verified.

	- KeySensor and StringSensor written and tested on OSX and Linux.

	- Javascript SFString events were calling an incorrect Javascript call;
	  changed all JS_NewString calls to JS_NewStringCopyZ.

	- added code in Javascript to enable println command; it is just a copy of print, as most
	  scripts seem to assume that print gives a carrage return.

	- X3DParser reviewed, and parts rewritten 

	- parse (only) x3dv COMPONENT, EXPORT, IMPORT, META, PROFILE statements. Note that currently nothing
	  is done with these statements.

	- VRML,x3dv routing to nodes with both (set_x and x) fields was broken - ensure that we route
	  only to the set_x fields. (same with eventOuts).

	- migrate protos scripts from depreciated eventIn, eventOut, exposedField, initializeOnly to 
	  inputOnly, outputOnly, inputOutput, initializeOnly, but keep backwards compatibility.

	- Javascript via X3D - initializers were not correctly set for X3D types (fixed VRMLC.pm to
	  start at 0, not 7000 for X3DACCESSORS, code required in X3DProtoScript.c)

	- Javascript ADD_ROOT and REMOVE_ROOT commands removed;
